--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ava Template</title>
+    <title>Pitch.AI</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,400i|Roboto:500" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
@@ -18,7 +18,7 @@
                         <h1 class="m-0">
                             <a href="#">
                                 <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                                    <title>Ava</title>
+                                    <title>Pitch.AI</title>
                                     <defs>
                                         <linearGradient x1="100%" y1="0%" x2="0%" y2="100%" id="logo-gradient-b">
                                             <stop stop-color="#39D8C8" offset="0%"/>
@@ -271,7 +271,7 @@
                     <div class="brand footer-brand">
                         <a href="#">
                             <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                                <title>Ava</title>
+                                <title>Pitch.AI</title>
                                 <defs>
                                     <path d="M32 16H16v16H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h28a2 2 0 0 1 2 2v14z" id="logo-gradient-footer-a"/>
                                     <linearGradient x1="50%" y1="50%" y2="100%" id="logo-gradient-footer-b">
@@ -330,7 +330,7 @@
                             </a>
                         </li>
                     </ul>
-                    <div class="footer-copyright">&copy; 2018 Ava, all rights reserved</div>
+                    <div class="footer-copyright">&copy; 2018 Pitch.AI, all rights reserved</div>
                 </div>
             </div>
         </footer>
