Hook up email form to formspree

--- a/index.html
+++ b/index.html
@@ -52,14 +52,16 @@
                     <div class="hero-inner">
                         <h1 class="hero-title h2-mobile mt-0 is-revealing">Landing template for startups</h1>
                         <p class="hero-paragraph is-revealing">Our landing page template works for all the devices, so you only have to setup it once, and get beautiful results forever.</p>
-                        <div class="hero-form newsletter-form field field-grouped is-revealing">
-                            <div class="control control-expanded">
-                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                        <form method="POST" action="https://formspree.io/leungak+pitch.ai@uw.edu">
+                            <div class="hero-form newsletter-form field field-grouped is-revealing">
+                                <div class="control control-expanded">
+                                    <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                                </div>
+                                <div class="control">
+                                    <button class="button button-primary button-block button-shadow" type="submit">Get early access</button>
+                                </div>
                             </div>
-                            <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Get early access</a>
-                            </div>
-                        </div>
+                        </form>
                         <div class="hero-browser">
                             <div class="bubble-3 is-revealing">
                                 <svg width="427" height="286" viewBox="0 0 427 286" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -252,14 +254,16 @@
                             <h2 class="section-title mt-0">Stay in the know</h2>
                             <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation</p>
                         </div>
-                        <div class="footer-form newsletter-form field field-grouped is-revealing">
-                            <div class="control control-expanded">
-                                <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                        <form method="POST" action="https://formspree.io/leungak+pitch.ai@uw.edu">
+                            <div class="footer-form newsletter-form field field-grouped is-revealing">
+                                <div class="control control-expanded">
+                                    <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                                </div>
+                                <div class="control">
+                                        <button class="button button-primary button-block button-shadow" type="submit">Get early access</button>
+                                </div>
                             </div>
-                            <div class="control">
-                                <a class="button button-primary button-block button-shadow" href="#">Get early access</a>
-                            </div>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </section>
