Use Google script to collect email submissions

--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
                     <div class="hero-inner">
                         <h1 class="hero-title h2-mobile mt-0 is-revealing">Landing template for startups</h1>
                         <p class="hero-paragraph is-revealing">Our landing page template works for all the devices, so you only have to setup it once, and get beautiful results forever.</p>
-                        <form method="POST" action="https://formspree.io/leungak+pitch.ai@uw.edu">
+                        <form method="POST" action="https://script.google.com/a/uw.edu/macros/s/AKfycbwoBP_coD2XvbaVixT5MThqJfv6RH5RdoBLQaa3/exec">
                             <div class="hero-form newsletter-form field field-grouped is-revealing">
                                 <div class="control control-expanded">
                                     <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                                    <input id="honeypot" type="text" name="honeypot" value="" />
                                 </div>
                                 <div class="control">
                                     <button class="button button-primary button-block button-shadow" type="submit">Get early access</button>
@@ -254,10 +255,11 @@
                             <h2 class="section-title mt-0">Stay in the know</h2>
                             <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation</p>
                         </div>
-                        <form method="POST" action="https://formspree.io/leungak+pitch.ai@uw.edu">
+                        <form method="POST" action="https://script.google.com/a/uw.edu/macros/s/AKfycbwoBP_coD2XvbaVixT5MThqJfv6RH5RdoBLQaa3/exec">
                             <div class="footer-form newsletter-form field field-grouped is-revealing">
                                 <div class="control control-expanded">
                                     <input class="input" type="email" name="email" placeholder="Your best email&hellip;">
+                                    <input id="honeypot" type="text" name="honeypot" value="" />
                                 </div>
                                 <div class="control">
                                         <button class="button button-primary button-block button-shadow" type="submit">Get early access</button>
@@ -341,5 +343,6 @@
     </div>
 
     <script src="dist/js/main.min.js"></script>
+    <script data-cfasync="false" type="text/javascript" src="/src/js/form-submission-handler.js"></script>
 </body>
 </html>
