--- a/index.html
+++ b/index.html
@@ -9,19 +9,31 @@
     <link rel="stylesheet" href="dist/css/style.css">
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
-<body  class="is-boxed has-animations">
+<body  class="is-boxed has-animations"
+       style="background-image: linear-gradient(to top, #a8edea 0%, #fed6e3 100%);
+">
     <div class="body-wrap boxed-container">
 
         <!-- <div class="shape-separator"></div> -->
 
         <header class="site-header">
             <div class="container">
-                <div class="site-header-inner">
+                <div class="site-header-inner" style="float:left;">
                     <div class="brand header-brand">
                         <h1 class="m-0">
                             <a href="#">
-                                <img style="width:90px; padding-top:25px;" src="src/img/logo.svg">
+                                <img style="width:90px; padding-top:25px;" src="src/img/logo-black.svg">
                             </a>
+                        </h1>
+                    </div>
+                </div>
+
+                <div class="site-header-inner" style="float:right;">
+                    <div class="brand header-brand">
+                        <h1 class="m-0">
+
+                                <h4>👋 <a style="text-decoration:none" href="mailto:youremailaddress">Say hey.</a></h4>
+
                         </h1>
                     </div>
                 </div>
@@ -33,7 +45,7 @@
                 <div class="container">
                     <div class="hero-inner">
                         <h1 class="hero-title h2-mobile mt-0 is-revealing">Presentations just got a lot easier.</h1>
-                        <p class="hero-paragraph is-revealing">A quick blurb about what Pitch.ai is</p>
+                        <p class="hero-paragraph is-revealing">Pitch.ai is a powerful, AI-fueled tool to improve your public speaking and presentation skills.</p>
                         <form method="POST" action="https://script.google.com/a/uw.edu/macros/s/AKfycbwoBP_coD2XvbaVixT5MThqJfv6RH5RdoBLQaa3/exec">
                             <div class="hero-form newsletter-form field field-grouped is-revealing">
                                 <div class="control control-expanded">
@@ -46,7 +58,7 @@
                             </div>
                         </form>
                         <div class="hero-browser">
-                            <img src="src/img/hero.png">
+                            <img src="src/img/hero-2.png">
                         </div>
                     </div>
                 </div>
@@ -68,8 +80,8 @@
                                             </g>
                                         </svg>
                                     </div>
-                                    <h3 class="feature-title">Discover</h3>
-                                    <p class="text-sm">Where text is visible, people tend to focus on the textual content rather than upon overall presentation.</p>
+                                    <h3 class="feature-title">AI-powered, instant feedback</h3>
+                                    <p class="text-sm">Pitch.ai uses the power of AI to analyze your audio & video, and gives you concrete, actionable feedback on how to improve.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -82,8 +94,8 @@
                                             </g>
                                         </svg>
                                     </div>
-                                    <h3 class="feature-title">Discover</h3>
-                                    <p class="text-sm">Where text is visible, people tend to focus on the textual content rather than upon overall presentation.</p>
+                                    <h3 class="feature-title">Advanced content analysis</h3>
+                                    <p class="text-sm">Pitch.ai looks at the content of your speech and gives suggestions to make your presentation even more powerful.</p>
                                 </div>
                             </div>
                         </div>
@@ -100,8 +112,8 @@
                                         </svg>
 
                                     </div>
-                                    <h3 class="feature-title">Discover</h3>
-                                    <p class="text-sm">Where text is visible, people tend to focus on the textual content rather than upon overall presentation.</p>
+                                    <h3 class="feature-title">Train with course packs</h3>
+                                    <p class="text-sm">Level up your speech by working through our course packs, helping you practice for everything from wedding speeches to presentations.</p>
                                 </div>
                             </div>
                             <div class="feature is-revealing">
@@ -115,8 +127,8 @@
                                             </g>
                                         </svg>
                                     </div>
-                                    <h3 class="feature-title">Discover</h3>
-                                    <p class="text-sm">Where text is visible, people tend to focus on the textual content rather than upon overall presentation.</p>
+                                    <h3 class="feature-title">Track your progress over time</h3>
+                                    <p class="text-sm">You're going to get better–and we'll give you the tools to see how your speaking and presentation skills have improved over time.</p>
                                 </div>
                             </div>
                         </div>
@@ -129,7 +141,7 @@
                     <div class="newsletter-inner section-inner">
                         <div class="newsletter-header text-center is-revealing">
                             <h2 class="section-title mt-0">Stay in the know</h2>
-                            <p class="section-paragraph">Lorem ipsum is common placeholder text used to demonstrate the graphic elements of a document or visual presentation</p>
+                            <p class="section-paragraph">We're in the beta testing phase–sign up for an opportunity to try it out.</p>
                         </div>
                         <form method="POST" action="https://script.google.com/a/uw.edu/macros/s/AKfycbwoBP_coD2XvbaVixT5MThqJfv6RH5RdoBLQaa3/exec">
                             <div class="footer-form newsletter-form field field-grouped is-revealing">
@@ -147,28 +159,12 @@
             </section>
         </main>
 
-        <footer class="site-footer text-light">
+        <footer class="site-footer text-light" style="background-color: #3f47f5;">
             <div class="container">
                 <div class="site-footer-inner">
                     <div class="brand footer-brand">
                         <a href="#">
-                            <svg width="32" height="32" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-                                <title>Pitch.AI</title>
-                                <defs>
-                                    <path d="M32 16H16v16H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h28a2 2 0 0 1 2 2v14z" id="logo-gradient-footer-a"/>
-                                    <linearGradient x1="50%" y1="50%" y2="100%" id="logo-gradient-footer-b">
-                                        <stop stop-color="#FFF" stop-opacity="0" offset="0%"/>
-                                        <stop stop-color="#FFF" offset="100%"/>
-                                    </linearGradient>
-                                </defs>
-                                <g fill="none" fill-rule="evenodd">
-                                    <mask id="logo-gradient-footer-c" fill="#fff">
-                                        <use xlink:href="#logo-gradient-footer-a"/>
-                                    </mask>
-                                    <use fill-opacity=".32" fill="#FFF" xlink:href="#logo-gradient-footer-a"/>
-                                    <path fill="url(#logo-gradient-footer-b)" mask="url(#logo-gradient-footer-c)" d="M-16-16h32v32h-32z"/>
-                                </g>
-                            </svg>
+                            <img style="width:90px; padding-top:25px;" src="src/img/logo-white.svg">
 
                         </a>
                     </div>
