Added mobile view and fake reviews

--- a/index.html
+++ b/index.html
@@ -68,11 +68,17 @@
                             </div>
                         </form>
                         <div class="hero-browser">
-                            <img src="src/img/hero-2.png">
+                            <img src="src/img/hero-3.png">
                         </div>
                     </div>
                 </div>
             </section>
+
+            <div class="quote" style="padding:75px 0px 50px 0px; text-align:center;">
+              <center><img style="width:150px;" src="src/img/stars.png"></center>
+              <blockquote>Pitch.ai is the life hack I didn't know that I needed</blockquote>
+              <caption>– Jane, software developer at Slack</caption>
+            </div>
 
             <section class="features section text-center">
                 <div class="container">
@@ -142,6 +148,18 @@
                                 </div>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </section>
+
+            <section class="hero text-center">
+                <div class="container">
+
+
+                    <div class="quote has-bottom-divider" style="padding-bottom:75px">
+                      <center><img style="width:150px;" src="src/img/stars-full.png"></center>
+                      <blockquote>A must-have for anyone that presents regularly–it's a game-changer</blockquote>
+                      <caption>– Oliver, graduate student at University of Washington</caption>
                     </div>
                 </div>
             </section>
