--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                                 </div>
                                 <div class="control">
                                     <button class="button button-primary button-block button-shadow" type="submit">Get early access</button>
+                                    <div class="form-thanks">Thanks!</div>
                                 </div>
                             </div>
                         </form>
@@ -179,6 +180,7 @@
                                 </div>
                                 <div class="control">
                                     <button class="button button-primary button-block button-shadow" type="submit">Get early access</button>
+                                    <div class="form-thanks">Thanks!</div>
                                 </div>
                             </div>
                         </form>
