--- a/index.html
+++ b/index.html
@@ -246,5 +246,15 @@
 
     <script src="dist/js/main.min.js"></script>
     <script data-cfasync="false" type="text/javascript" src="/src/js/form-submission-handler.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-133578819-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-133578819-1');
+    </script>
 </body>
 </html>
